edited about html

--- a/about.html
+++ b/about.html
@@ -36,9 +36,7 @@
                 <article class="card">
                     <h1 class="l-heading">About Our Organization</h1>
                     <p> ipsum dolor, sit amet consectetur adipisicing elit. Aliquam delectus doloremque dolorum, illo ullam, 
-                    fugit error, quisquam dignissimos perspiciatis velit veniam animi tenetur culpa qui ex ipsa quas porro 
-                    praesentium at ea deserunt et explicabo nobis? Excepturi, iusto.
-                     Quisquam non inventore ipsum eos amet vitae, culpa iste repellat voluptatum voluptatibus?</p>
+                    fugit error,  vitae, culpa iste repellat voluptatum voluptatibus?</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi facere magni esse,
                      nam quas dolore iusto, vel veritatis ullam asperiores aperiam similique sequi obcaecati 
                      voluptatibus ab pariatur maiores delectus dolores porro corrupti molestiae? Ducimus quae magnam asperiores.
